Fix overlapping button for minimap and search full text.

--- a/web-ui/src/main/resources/catalog/style/gn_search.less
+++ b/web-ui/src/main/resources/catalog/style/gn_search.less
@@ -377,7 +377,7 @@ span.gn-facet-label:first-letter {
   [data-gn-map-field] {
     .gn-draw-btn,
     .btn-group-vertical {
-      top: 4px;
+      top: 54px;
       position: absolute;
       z-index: 10;
     }
